--- a/Amazon.html
+++ b/Amazon.html
@@ -62,7 +62,7 @@
     </header>
     <div class="hero-section">
         <div class="hero-panel">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a class="hero-click">Click here to go to amazon.in</a></p>
+            <p>You are a nigga <a class="hero-click">Click here to go to amazon.in</a></p>
         </div>
     </div>
     <div class="shop-section">
